[package]
name = "bc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
rust-crypto = "^0.2"
bincode = "1.3" #serilize and deserialise the data
failure = "0.1" #error handling
sled = "0.34" #data-base
log = "0.4"
env_logger = "0.10.0"
clap = "4.0.29" #command-line tool
bitcoincash-addr = "0.5.2" #creating wallet address
rand = "0.8.5"
merkle-cbt = "0.3.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"